# zrbin2sql

./: LICENSE  README.md  pyproject.toml  requirements.txt  venv.sh  zrbin2sql.py
.github/workflows/: release.yml
